--- a/style.css
+++ b/style.css
@@ -135,7 +135,7 @@ padding: 0;
 .name{
     font-size: 45px;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    color: blueviolet;
+    color: white;
   
 }
 .moreabout{
@@ -149,7 +149,7 @@ padding: 0;
 .about{
     font-size: 22px;
     margin-top: 23px;
-    color: chocolate;
+    color: yellow;
 }
 .buttons{
     margin-top: 34px;
