--- a/style.css
+++ b/style.css
@@ -96,7 +96,7 @@ padding: 0;
     
     width: 100vw;
     padding-left: 170px;
-    background: rgba(0,0,0,.6) url(bg.jpg);
+    background: rgba(0,0,0,.6) url(gauravks.jpg);
     background-blend-mode: darken;
     background-size: cover;
 
